@@ -4,6 +4,13 @@ from 2.7.15 to 2.7.16
 - adding support for progressive report to reparing operation at API level
 - warning before processing to the backup if gnupg signatories are provided
   without any gnupg recipient.
+- fixing bug reporting the following message:
+"Subtracting an "infinint" greater than the first, "infinint" cannot be negative
+  which was due to duplicated counter decrement while merging two archives and
+  overwriting policy drives entry to be removed from the resulting archive adding
+  to that, the very specific/rare condition where the number of removals exceeds
+  more than the half of kept entries...
+
 
 from 2.7.14 to 2.7.15
 - updating libdar about CURLINFO_CONTENT_LENGTH_DOWNLOAD symbol which is
